# Stock-Magic-V2.0-

./: .gitignore  CLAUDE.md  HANDOVER.md  HOW_TO_ADD_STRATEGY.md  README.md  STRATEGY_PROTOCOL.md  SYSTEM_SPEC.md  UNIVERSE.md  USAGE.md  backtest_chinese_stocks.py  backtest_mu.py  config.yaml  context.txt  custom_pool.txt  main.py  pyproject.toml  requirements.txt  run_daily.sh  un_diff.patch
signal_system/: .env.example  .gitignore  HANDOVER.md  HOW_TO_ADD_STRATEGY.md  README.md  UNIVERSE.md  UNIVERSE.md.bak  UNIVERSE_EPS_TEST.md  UNIVERSE_test.md  USAGE.md  analyze_drawdown.py  analyze_mdd_positions.py  analyze_tier_metrics.py  analyze_tier_simple.py  analyze_trades.py  backtest_1500_rebalance.py  backtest_2016_2026.ipynb  backtest_2016_2026.py  backtest_bullbear.py  backtest_fixed_dollar.py  backtest_four_approaches.py  backtest_nextday.py  backtest_nextday_final.py  backtest_nextday_v2.py  backtest_nextday_v3.py  backtest_param_study.py  backtest_position_2000.py  backtest_report_2016_2026.html  backtest_report_2016_2026.md  backtest_report_bull_sensitive_2016_2026.html  backtest_sharpe_focused.py  backtest_simple.py  backtest_single_approach.py  backtest_stoploss_plus.py  backtest_three_approaches.py  backtest_us500.py  backtest_with_stoploss.py  config.yaml  download_universe.py  find_optimal_combo.py  (+12 more)
signal_system/.ipynb_checkpoints/: backtest_2016_2026-checkpoint.ipynb
signal_system/backtest/: engine.py  extended_backtest.py  full_backtest_all.py  full_backtest_v_eps_v2.py  optimizer.py
signal_system/data/: fetcher.py  fundamentals.py  index_cache.json  (+1 more)
(+3683 files in other folders)
